# cad-spec-gen

./: .cad_skill_version.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_v2.1.0.md  RELEASE_v2.1.1.md  RELEASE_v2.1.2.md  RELEASE_v2.10.0.md  RELEASE_v2.23.0.md  RELEASE_v2.23.1.md  RELEASE_v2.23.3.md  RELEASE_v2.23.4.md  RELEASE_v2.23.5.md  RELEASE_v2.24.0.md  RELEASE_v2.5.0.md  RELEASE_v2.7.1.md  RELEASE_v2.8.0.md  RELEASE_v2.9.0.md  RELEASE_v2.9.1.md  RELEASE_v2.9.2.md  annotate_render.py  assembly_validator.py  bom_parser.py  cad_paths.py  cad_pipeline.py  cad_spec_defaults.py  cad_spec_extractors.py  cad_spec_gen.py  cad_spec_reviewer.py  cad_spec_section_walker.py  comfyui_enhancer.py  comfyui_env_check.py  cq_to_dxf.py  draw_three_view.py  drawing.py  (+24 more)
.claude/: settings.local.json
.claude/commands/: cad-codegen.md  cad-enhance.md  cad-help.md  cad-spec.md  mechdesign.md
.github/workflows/: sw-smoke.yml  tests.yml
adapters/claude-code/: install.sh
adapters/dify/: README.md
adapters/langchain/: README.md  tools.py
adapters/openai/: README.md  functions.json
adapters/parts/: __init__.py  base.py  bd_warehouse_adapter.py  jinja_primitive_adapter.py  parametric_transmission.py  parametric_transmission_adapter.py  partcad_adapter.py  step_pool_adapter.py  sw_parametric_adapter.py  sw_toolbox_adapter.py  vendor_synthesizer.py
adapters/solidworks/: __init__.py  sw_com_session.py  sw_config_broker.py  sw_config_lists_cache.py  sw_convert_worker.py  sw_detect.py  sw_list_configs_worker.py  sw_material_bridge.py  sw_probe.py  sw_texture_backfill.py  sw_toolbox_catalog.py
artifacts/20260425-112739/: resolve_report.json
artifacts/regression/: report.md
artifacts/sw_b9/: acceptance_summary.json  parts_library_toolbox_off.yaml  parts_library_toolbox_on.yaml  preflight.json  stage_0_5.json  stage_a.json  stage_b.json  stage_b_extracted_bom.csv  stage_c.json  stage_d.json  stage_d_after.xml  stage_d_before.xml  stage_d_pre.json  stage_e.json
bananapro/: response_20260323_181226.json
cad/: README.md
cad/budget/: CAD_SPEC.md
cad/charging/: CAD_SPEC.md
cad/communication/: CAD_SPEC.md
cad/couplant/: CAD_SPEC.md
cad/detection/: CAD_SPEC.md  assembly.py  build_all.py  params.py
cad/electrical/: CAD_SPEC.md
cad/end_effector/: CAD_SPEC.md  DESIGN_REVIEW.json  DESIGN_REVIEW.md  PRODUCT_GRAPH.json  README.md  assembly.py  bom.py  build_all.py  cad_spec_defaults.py  cq_to_dxf.py  drawing.py  (+74 more)
catalogs/: bd_warehouse_catalog.yaml
codegen/: consolidate_glb.py  enriched_envelope.py  gen_assembly.py  gen_build.py  gen_params.py  gen_parts.py  gen_std_parts.py  library_routing.py  llm_codegen.py  template_mapping_loader.py
config/: gisbot.json  toolbox_cn_synonyms.yaml
docs/: 2d_drawing_fix_plan.md  PARTS_LIBRARY.md  PROGRESS.md  assembly_positioning_enhancement_plan.md  auto_annotation_plan.md  cad-help-guide-en.md  cad-help-guide-zh.md  cad-jury-config.md  cad_pipeline_agent_guide.md  enhance_consistency_fix_plan.md  fal_depth_pass_plan.md  jury-loop-config.md  lito_3dgs_integration_plan.md  material_bridge_fix_plan.md  pipeline_architecture.md  tool_deployment_fix_plan.md  triple_backend_plan.md  系统全景图.html  系统全景图_v2.html
examples/: 04-末端执行机构设计.md
refs/: 换视角但保一致性画法.docx  未描述连接情况的处理方法.txt  末端执行机构3D渲染Prompt与设计说明文档.md
scripts/: dev_sync.py  refresh_gisbot_fixture.py  sw_spike_diagnose.py  sw_spike_h1_convert.py  sw_spike_h2_configs.py  sw_spike_h3_tmpext.py
sw_preflight/: __init__.py  cache.py  diagnosis.py  dry_run.py  io.py  matrix.py  preference.py  preflight.py  report.py  types.py  user_provided.py
templates/: assembly.py.j2  build_all.py.j2  comfyui_workflow_template.json  part_module.py.j2  prompt_enhance.txt  prompt_enhance_unified.txt  prompt_exploded.txt  prompt_ortho.txt  render_config.schema.json  render_config_template.json
tests/: conftest.py  sw_toolbox_test_helpers.py  test_a14_preset_texture_coverage.py  test_a2_integration.py  test_agents_md.py  test_apply_template.py  test_artifact_index_contract.py  test_assembly_coherence.py  test_assembly_import_isolation.py  test_assembly_signature_contract.py  test_assembly_validator.py  test_assert_ac3_range.py  test_assert_schema_per_step.py  test_assert_sw_inspect_schema.py  test_b0_edition.py  test_backend_packaging_contract.py  test_bom_classifier_new_categories.py  test_bom_classifier_threaded_parts.py  test_bom_parser_material_normalization.py  test_build_blender_env_backfill.py  test_cad_lib_local.py  test_cad_pipeline_jury_subcommand.py  test_cad_pipeline_preflight_chain.py  test_cad_pipeline_resume.py  test_cad_pipeline_status.py  test_cad_spec_bom_extractor.py  test_cad_spec_gen_preflight_integration.py  test_cad_spec_p7_template_envelope.py  test_cad_spec_part_envelope_sections.py  test_cad_spec_xy_layout.py  test_change_scope_gate.py  test_check_env_sw.py  test_check_toolbox_path_healthy.py  test_ci_dev_sync_gate.py  test_codegen_docstring_geometry_quality.py  test_codex_skill_register.py  test_common_model_family_admission.py  test_common_model_library_batch_2.py  test_common_model_library_batch_3.py  test_common_model_library_batch_4.py  (+193 more)
tmp/: sw_com_spike.py
tools/: _file_lock.py  annotate_render.py  artifact_index.py  assembly_signature.py  assert_sw_inspect_schema.py  cad_pipeline_agent_guide.md  cad_spec_bom_extractor.py  cad_spec_extractors.py  cad_spec_gen.py  check_bd_warehouse_upstream.py  custom_parts_audit.py  enhance_consistency.py  enhancement_semantic_review.py  import_policy.py  model_audit.py  model_context.py  model_contract.py  model_import.py  parts_library_writer.py  path_policy.py  photo3d_action_runner.py  photo3d_actions.py  photo3d_autopilot.py  photo3d_baseline.py  photo3d_delivery_pack.py  photo3d_gate.py  photo3d_handoff.py  photo3d_jury.py  photo3d_loop.py  photo3d_provider_presets.py  photo3d_recover.py  product_goal_parser.py  product_goal_state.py  product_graph.py  project_guide.py  render_qa.py  render_quality_check.py  render_regression.py  run_manifest.py  sw_b9_acceptance.py  (+10 more)
(+563 files in other folders)
