[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-spec-gen"
version = "2.10.0"
description = "CAD pipeline skill: design doc → structured spec → feature extraction → code generation → assembly validation → 2D drawings (GB/T section views) → 3D renders → photorealistic images (4 backends v2.7)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "proecheng" }
]
keywords = ["cad", "cadquery", "pipeline", "mechanical-design", "blender", "ai-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "Jinja2>=3.0",
]

[project.optional-dependencies]
cad = ["cadquery>=2.0", "ezdxf>=0.18"]
render = ["matplotlib>=3.5", "Pillow>=9.0"]
# Parts library system (v2.8.0+): YAML registry for std-parts resolution.
# The base feature only needs PyYAML. bd_warehouse / partcad are separate
# extras that users opt in to.
parts_library = ["PyYAML>=6.0"]
parts_library_bd = ["PyYAML>=6.0", "bd_warehouse>=0.2.0"]
parts_library_pc = ["PyYAML>=6.0", "partcad>=0.7.0"]
all = [
    "cadquery>=2.0",
    "ezdxf>=0.18",
    "matplotlib>=3.5",
    "Pillow>=9.0",
    "PyYAML>=6.0",
]

[project.scripts]
cad-skill-setup = "cad_spec_gen.cli:main_setup"
cad-skill-check = "cad_spec_gen.cli:main_check"
cad-lib = "cad_spec_gen.cad_lib:main"

[project.urls]
Homepage = "https://github.com/proecheng/cad-spec-gen"
Repository = "https://github.com/proecheng/cad-spec-gen"

[tool.hatch.build.targets.sdist]
include = ["src/cad_spec_gen/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/cad_spec_gen"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
env = [
    "PYTHONHASHSEED=0",
    "PYTHONIOENCODING=utf-8",
]
markers = [
    "fast: unit tests, <100ms each",
    "integration: full-chain tests",
    "slow: packaging/wheel-build tests, run on main/nightly only",
    "blender: real Blender headless smoke tests (v2.9.2+); auto-skip if Blender missing",
    "real_subprocess: 真 subprocess / 真 IO 集成测试，无需真实 SolidWorks，默认 pytest 不跑；需 -m real_subprocess",
]
testpaths = ["tests"]
