[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-spec-gen"
version = "2.12.0"
description = "CAD pipeline skill: design doc → structured spec → feature extraction → code generation → assembly validation → 2D drawings (GB/T section views) → 3D renders → photorealistic images (4 backends v2.7)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "proecheng" }
]
keywords = ["cad", "cadquery", "pipeline", "mechanical-design", "blender", "ai-skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "Jinja2>=3.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
cad = ["cadquery>=2.0", "ezdxf>=0.18"]
render = ["matplotlib>=3.5", "Pillow>=9.0"]
# Parts library system (v2.8.0+): YAML registry for std-parts resolution.
# The base feature only needs PyYAML. bd_warehouse / partcad are separate
# extras that users opt in to.
parts_library = ["PyYAML>=6.0"]
parts_library_bd = ["PyYAML>=6.0", "bd_warehouse>=0.2.0"]
parts_library_pc = ["PyYAML>=6.0", "partcad>=0.7.0"]
# SolidWorks 集成（Windows only，决策 #37 2026-04-16）。Linux/macOS 上
# sys_platform marker 让 pywin32 被 pip 跳过，extra 装成 no-op（sw_detect
# 运行时会通过 UX 提示告知平台限制，见 tools/hybrid_render/check_env.py）
solidworks = ['pywin32>=306; sys_platform == "win32"']
all = [
    "cadquery>=2.0",
    "ezdxf>=0.18",
    "matplotlib>=3.5",
    "Pillow>=9.0",
    "PyYAML>=6.0",
]

[project.scripts]
cad-skill-setup = "cad_spec_gen.cli:main_setup"
cad-skill-check = "cad_spec_gen.cli:main_check"
cad-lib = "cad_spec_gen.cad_lib:main"

[project.urls]
Homepage = "https://github.com/proecheng/cad-spec-gen"
Repository = "https://github.com/proecheng/cad-spec-gen"

[tool.hatch.build.targets.sdist]
include = ["src/cad_spec_gen/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/cad_spec_gen"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
env = [
    "PYTHONHASHSEED=0",
    "PYTHONIOENCODING=utf-8",
]
markers = [
    "fast: unit tests, <100ms each",
    "integration: full-chain tests",
    "slow: packaging/wheel-build tests, run on main/nightly only",
    "blender: real Blender headless smoke tests (v2.9.2+); auto-skip if Blender missing",
    "real_subprocess: 真 subprocess / 真 IO 集成测试，无需真实 SolidWorks，默认 pytest 不跑；需 -m real_subprocess",
    "requires_solidworks: 需真实 SolidWorks + pywin32；缺任一自动 skip（不报 fail）",
]
testpaths = ["tests"]
# rev 5 H：默认所有 pytest 调用启 sw_config_broker M-2/M-4 三模块 cov 报告
# plan-drift fix：plan 写 --cov-fail-under=95 in addopts 让单文件 test 必 fail；
# 改为 CI tests.yml 显式加 fail_under flag 而非全局 addopts（本地开发不烦）。
addopts = [
    "--cov=adapters.solidworks.sw_config_broker",
    "--cov=adapters.solidworks.sw_config_lists_cache",
    "--cov=adapters.solidworks.sw_list_configs_worker",
    "--cov-report=term-missing",
]

# rev 5 H：覆盖率 enforce（spec §12）— 仅 sw_config_broker M-2/M-4 三模块
# plan-drift fix：plan 写 source = ["adapters/solidworks"] 让其他 75-82% 模块拉低
# 加权到 86%，远低于 95%。spec H "防 future regression" 真意 = 本 PR 三模块未来不退化。
[tool.coverage.run]
source = [
    "adapters.solidworks.sw_config_broker",
    "adapters.solidworks.sw_config_lists_cache",
    "adapters.solidworks.sw_list_configs_worker",
]
# plan-drift fix：plan 写 branch = true 让 partial branch coverage 算严，
# 三模块从 95.07% 降到 94.07% fail；spec rev 5 H "≥95% 覆盖率"未要求 branch
# coverage（stmt cov 默认即满足）。关 branch 防 plan-drift。

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
fail_under = 95
show_missing = true
skip_covered = false
